# triple-data-generation-using-distant-supervision

./: 01. split_file_to_pages_wiki_dump.py  02. filter_pages.py  03. generate_triples_from_wiki_data.py  04. visualize_entities_and_relations.py  05. generate_relation_dataset.py  06. get_relation_list.py  07. add_relation_description_from_wikidata_property_list.py  08. split_dataset.py  09. filter_dataset.py  10. filter_dataset_using_merged_relations.py  11. duplicated_dataset_filtering.py  12. extract_data_from_entity_annotated_data.py  13. analysis_dataset.py  14. split_data_to_train_valid.py  config.py  data.cfg  path.cfg  pyproject.toml  relations.cfg
ReDataGenerator/: sparql_query.py  utils.py  wiki_identifier_finder.py
